[gd_scene load_steps=49 format=3 uid="uid://80wnmousun1i"]

[ext_resource type="Script" uid="uid://u1vewgrbttkm" path="res://scripts/skeleton.gd" id="1_bnirc"]
[ext_resource type="Texture2D" uid="uid://dpnl1gf58uuhb" path="res://assets/Enemies/Skeleton Archer Idle.png" id="2_bnirc"]
[ext_resource type="Texture2D" uid="uid://cg58gs38qlhyg" path="res://assets/Enemies/Skeleton Archer Firing.png" id="3_5pgwy"]
[ext_resource type="Texture2D" uid="uid://daugnaa820yr" path="res://assets/Enemies/Skeleton Archer Walk(1).png" id="4_ssl1b"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w4hcs"]
radius = 9.0
height = 38.0

[sub_resource type="AtlasTexture" id="AtlasTexture_haw2w"]
atlas = ExtResource("2_bnirc")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0f3v"]
atlas = ExtResource("2_bnirc")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrus2"]
atlas = ExtResource("3_5pgwy")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e1v2"]
atlas = ExtResource("3_5pgwy")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjsi3"]
atlas = ExtResource("3_5pgwy")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nhjk"]
atlas = ExtResource("3_5pgwy")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghshk"]
atlas = ExtResource("3_5pgwy")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e85v8"]
atlas = ExtResource("3_5pgwy")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f63t1"]
atlas = ExtResource("3_5pgwy")
region = Rect2(0, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6rpr"]
atlas = ExtResource("3_5pgwy")
region = Rect2(24, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yhqa"]
atlas = ExtResource("3_5pgwy")
region = Rect2(48, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2iffn"]
atlas = ExtResource("3_5pgwy")
region = Rect2(72, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_67pwj"]
atlas = ExtResource("3_5pgwy")
region = Rect2(96, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnc0r"]
atlas = ExtResource("3_5pgwy")
region = Rect2(120, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l18t7"]
atlas = ExtResource("3_5pgwy")
region = Rect2(0, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdbwx"]
atlas = ExtResource("3_5pgwy")
region = Rect2(24, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdbj4"]
atlas = ExtResource("3_5pgwy")
region = Rect2(48, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i84ui"]
atlas = ExtResource("3_5pgwy")
region = Rect2(72, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulcnj"]
atlas = ExtResource("3_5pgwy")
region = Rect2(96, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjqjo"]
atlas = ExtResource("3_5pgwy")
region = Rect2(120, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l6in"]
atlas = ExtResource("3_5pgwy")
region = Rect2(0, 96, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bogq3"]
atlas = ExtResource("3_5pgwy")
region = Rect2(24, 96, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1nps"]
atlas = ExtResource("3_5pgwy")
region = Rect2(48, 96, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_05nho"]
atlas = ExtResource("3_5pgwy")
region = Rect2(72, 96, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbje2"]
atlas = ExtResource("3_5pgwy")
region = Rect2(96, 96, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bheaq"]
atlas = ExtResource("3_5pgwy")
region = Rect2(120, 96, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aajq6"]
atlas = ExtResource("3_5pgwy")
region = Rect2(0, 128, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1h1b"]
atlas = ExtResource("3_5pgwy")
region = Rect2(24, 128, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1s2x"]
atlas = ExtResource("4_ssl1b")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_526pm"]
atlas = ExtResource("4_ssl1b")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pywd7"]
atlas = ExtResource("4_ssl1b")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wli8i"]
atlas = ExtResource("4_ssl1b")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdmmv"]
atlas = ExtResource("4_ssl1b")
region = Rect2(0, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruecw"]
atlas = ExtResource("4_ssl1b")
region = Rect2(24, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpc7s"]
atlas = ExtResource("4_ssl1b")
region = Rect2(48, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyv88"]
atlas = ExtResource("4_ssl1b")
region = Rect2(72, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp773"]
atlas = ExtResource("4_ssl1b")
region = Rect2(0, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsqk3"]
atlas = ExtResource("4_ssl1b")
region = Rect2(24, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mplil"]
atlas = ExtResource("4_ssl1b")
region = Rect2(48, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hoal"]
atlas = ExtResource("4_ssl1b")
region = Rect2(72, 64, 24, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jn7vh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_haw2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0f3v")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrus2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e1v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjsi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nhjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghshk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e85v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f63t1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6rpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yhqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2iffn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67pwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnc0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l18t7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdbwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdbj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i84ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulcnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjqjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l6in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bogq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1nps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05nho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbje2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bheaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aajq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1h1b")
}],
"loop": false,
"name": &"shoot",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1s2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_526pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pywd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wli8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdmmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruecw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpc7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyv88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp773")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsqk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mplil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hoal")
}],
"loop": true,
"name": &"walk",
"speed": 16.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bnirc"]
radius = 250.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rp1f2"]
radius = 400.0

[node name="Skeleton" type="CharacterBody2D"]
collision_layer = 17
collision_mask = 17
script = ExtResource("1_bnirc")

[node name="shootDelay" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="StartDelay" type="Timer" parent="."]
wait_time = 0.25

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -18)
shape = SubResource("CapsuleShape2D_w4hcs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, -16)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_jn7vh")
animation = &"walk"
autoplay = "idle"
frame = 4
frame_progress = 0.771824
offset = Vector2(0, -4)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_bnirc")

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
position = Vector2(0, -12)
shape = SubResource("CircleShape2D_rp1f2")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-17, -17)
collide_with_areas = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_detection_range_body_exited"]
